--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "init": "^0.1.2",
+    "nodemon": "^3.1.11",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
@@ -11,5 +13,16 @@
     "@types/nodemon": "^1.19.6",
     "kleur": "^4.1.5",
     "typescript": "^5.9.3"
-  }
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
