--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,8 @@
     "forceConsistentCasingInFileNames": true, // Enforce consistent imports
     "resolveJsonModule": true, // Allow importing JSON files
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
 
     /* === Type Safety === */
     "strict": true, // Enable all strict checks
