--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -10,8 +11,11 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3",
     "@types/nodemon": "^1.19.6",
     "kleur": "^4.1.5",
+    "prisma": "^7.1.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "name": "server",
